--- a/src/Project/Common/website/App_Config/Include/Project/Project.Common.config
+++ b/src/Project/Common/website/App_Config/Include/Project/Project.Common.config
@@ -1,6 +1,6 @@
 ﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
   <sitecore>
-    <sc.variable name="rootHostName" value="helixbase" />
+    <sc.variable name="rootHostName" value="sc10xm1cm" />
     <settings>
       <setting name="Analytics.CookieDomain" value="$(rootHostName)" />
       <setting name="Login.BackgroundImageUrl" value="login/Helixbase_Wallpaper.jpg" />
