--- a/src/Project/Helixbase/website/App_Config/Include/Project/Project.Helixbase.config
+++ b/src/Project/Helixbase/website/App_Config/Include/Project/Project.Helixbase.config
@@ -1,7 +1,7 @@
 ﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
   <sitecore>
     <sites>
-      <site name="helixbase" patch:after="site[@name='modules_website']" targetHostName="$(rootHostName).sc.dev.local"
+      <site name="helixbase" patch:after="site[@name='modules_website']" targetHostName="$(rootHostName).local"
             enableTracking="true" virtualFolder="/" physicalFolder="/" rootPath="/sitecore/content/helixbase"
             dictionaryDomain="{8AC9D0C5-F969-4CFD-B0B3-4554638069A7}" startItem="/home" database="web"
             domain="extranet" allowDebug="true" cacheHtml="true" htmlCacheSize="50MB" registryCacheSize="0"
